fix(iOS bug with inputs): Hopefully remove the rounded borders from the input fields on iOS

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -27,7 +27,8 @@ a:hover {
   text-decoration: underline;
 }
 
-input {
+input[type="text"],
+input[type="search"] {
   -webkit-appearance: none;
   border-radius: 0;
   box-sizing: border-box;
